ready to upload to github pages

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
         <img src="source/left_sidebar.jpeg" width="25%">
 
         <ul>
-                <li>main</li>
-                <li>portfolio</li>
-                <li>technology used in this website</li>
+                <li><a href="1.html">1. main</a></li>
+                <li><a href="2.html">2. portfolio</a></li>
+                <li><a href="3.html">3. technology used in this website</a></li>
+                <li><a href="https://github.com/masonkoh/portfolio-website" target="_blank"
+                                title="go see how this page works">Visit Git Repository of this website</a></li>
         </ul>
-        <p>
-                <a href="https://github.com/masonkoh/portfolio-website" target="_blank"
-                        title="go see how this page works">Visit Git Repository of this website</a>
-        </p>
         <p style="margin-top: 2%; margin-bottom: 2%; margin-left: 1%">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore
