--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
                         Disqus.</a></noscript>
 
+        <script id="dsq-count-scr" src="//portfolio-gbwoby9nqg.disqus.com/count.js" async></script>
 </body>
 
 </html>
