iframe constraints fixed for responsive design

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                                 title="go see how this page works">Visit Git Repository of this website</a></li>
         </ul>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dPRtcRwKo-Y" frameborder="0"
+        <iframe width="50%" height="50%" src="https://www.youtube.com/embed/dPRtcRwKo-Y" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         <p style="margin-top: 2%; margin-bottom: 2%; margin-left: 1%">
