adding CSS in HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,39 @@
 </head>
 
 <body>
+        <style>
+                h1 {
+                        text-align: left;
+
+                        margin-top: 2%;
+                        margin-bottom: 2%;
+                        margin-left: 5%;
+                        margin-right: 5%;
+                }
+
+                p {
+                        margin-top: 2%;
+                        margin-bottom: 2%;
+                        margin-left: 5%;
+                        margin-right: 5%;
+                }
+
+                img {}
+
+                li {
+                        margin-top: 1%;
+                        margin-bottom: 1%;
+                        margin-left: 5%;
+                        margin-right: 5%;
+                }
+
+                iframe {
+                        margin-top: 2%;
+                        margin-bottom: 2%;
+                        margin-left: 5%;
+                        margin-right: 5%;
+                }
+        </style>
         <h1>Mason Youngmin Ko</h1>
         <img src="source/main_up.jpeg" width="25%">
         <img src="source/left_sidebar.jpeg" width="25%">
@@ -22,7 +55,7 @@
         <iframe width="50%" height="50%" src="https://www.youtube.com/embed/dPRtcRwKo-Y" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-        <p style="margin-top: 2%; margin-bottom: 2%; margin-left: 1%">
+        <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore
                 magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -33,7 +66,7 @@
                 mollit anim id est laborum.
         </p>
 
-        <p style="margin-top: 2%; margin-bottom: 2%; margin-left: 1%">
+        <p>
                 <strong>Sed ut perspiciatis unde</strong> omnis iste natus error sit voluptatem accusantium doloremque
                 laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
                 vitae
