CSS: updating minor change

--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
 
                 #grid_main {
                         display: grid;
-                        grid-template-columns: 25% 1fr;
+                        grid-template-columns: 15% 1fr;
                 }
 
                 #nav {
                         border-right: 1px solid black;
+                        padding-left: 3%;
+                        padding-right: 3%;
                 }
 
                 #content {
                         padding-left: 3%;
+                        padding-right: 3%;
                 }
 
                 #heading_title {
@@ -54,11 +57,10 @@
         <div id="grid_main">
                 <div id="nav">
                         <ul>
-                                <li><a href="1.html">main</a></li>
-                                <li><a href="2.html">portfolio</a></li>
-                                <li><a href="3.html">Tech used in this</a></li>
+                                <li><a href="1.html">About</a></li>
+                                <li><a href="2.html">Project</a></li>
                                 <li><a href="https://github.com/masonkoh/portfolio-website" target="_blank"
-                                                title="go see how this page works">Git Repo of this</a></li>
+                                                title="go see how this page works">Tech used in this</a></li>
                         </ul>
                 </div>
                 <div id="content">
