first responsive design using @media

--- a/index.html
+++ b/index.html
@@ -41,13 +41,17 @@
 
                 img {}
 
-
-
                 iframe {
                         margin-top: 2%;
                         margin-bottom: 2%;
                         margin-left: 5%;
                         margin-right: 5%;
+                }
+
+                @media(max-width: 800px) {
+                        #grid_main {
+                                display: block;
+                        }
                 }
         </style>
         <div>
