CSS file separated

--- a/index.html
+++ b/index.html
@@ -4,58 +4,12 @@
 <head>
         <title>Mason Youngmin Ko</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-        <style>
-                body {
-                        margin: 0%;
-                }
-
-                #grid_main {
-                        display: grid;
-                        grid-template-columns: 15% 1fr;
-                }
-
-                #nav {
-                        border-right: 1px solid black;
-                        padding-left: 3%;
-                        padding-right: 3%;
-                }
-
-                #content {
-                        padding-left: 3%;
-                        padding-right: 3%;
-                }
-
-                #heading_title {
-                        text-align: left;
-                        margin-top: 2%;
-                        margin-bottom: 2%;
-                        margin-left: 5%;
-                        margin-right: 5%;
-                        border-bottom: 1px black solid;
-                        padding: 2%;
-                        margin: 0%;
-                }
-
-                img {}
-
-                iframe {
-                        margin-top: 2%;
-                        margin-bottom: 2%;
-                        margin-left: 5%;
-                        margin-right: 5%;
-                }
-
-                @media(max-width: 800px) {
-                        #grid_main {
-                                display: block;
-                        }
-                }
-        </style>
         <div>
-                <h1 id="heading_title">Mason Youngmin Ko</h1>
+                <h1 id="heading_title"><a href="index.html">Mason Youngmin Ko</a></h1>
         </div>
 
         <div id="grid_main">
