--- a/index.html
+++ b/index.html
@@ -1,118 +1,116 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Mason Youngmin Ko</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+  </head>
 
-<head>
-        <title>Mason Youngmin Ko</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
-</head>
+  <body>
+    <div>
+      <h1 id="heading_title"><a href="index.html">Mason Youngmin Ko</a></h1>
+    </div>
 
-<body>
-        <div>
-                <h1 id="heading_title"><a href="index.html">Mason Youngmin Ko</a></h1>
-        </div>
+    <div id="grid_main">
+      <div id="nav">
+        <ul>
+          <li><a href="1.html">About</a></li>
+          <li><a href="2.html">Project</a></li>
+          <li>
+            <a
+              href="https://github.com/masonkoh/portfolio-website"
+              target="_blank"
+              title="go see how this page works"
+              >Tech used in this</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div id="content">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip
+          <strong>ex ea commodo consequat.</strong> Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
+        </p>
 
-        <div id="grid_main">
-                <div id="nav">
-                        <ul>
-                                <li><a href="1.html">About</a></li>
-                                <li><a href="2.html">Project</a></li>
-                                <li><a href="https://github.com/masonkoh/portfolio-website" target="_blank"
-                                                title="go see how this page works">Tech used in this</a></li>
-                        </ul>
-                </div>
-                <div id="content">
-                        <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et
-                                dolore
-                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                                aliquip
-                                <strong>ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in
-                                voluptate velit esse
-                                cillum dolore
-                                eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                                qui officia
-                                deserunt
-                                mollit anim id est laborum.
-                        </p>
+        <p>
+          <strong>Sed ut perspiciatis unde</strong> omnis iste natus error sit
+          voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
+          ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+          dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
+          qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+          dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+          quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+          aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
+          exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
+          ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
+          ea voluptate velit esse quam nihil molestiae consequatur, vel illum
+          qui dolorem eum fugiat quo voluptas nulla pariatur?
+        </p>
+      </div>
+    </div>
 
-                        <p>
-                                <strong>Sed ut perspiciatis unde</strong> omnis iste natus error sit voluptatem
-                                accusantium doloremque
-                                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                                architecto beatae
-                                vitae
-                                dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-                                aut fugit, sed
-                                quia
-                                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro
-                                quisquam est, qui
-                                dolorem
-                                ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi
-                                tempora incidunt
-                                ut
-                                labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis
-                                nostrum
-                                exercitationem ullam
-                                corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel
-                                eum iure
-                                reprehenderit
-                                qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem
-                                eum fugiat quo
-                                voluptas
-                                nulla pariatur?
-                        </p>
-
-                </div>
-        </div>
-
-
-        <!-- <iframe width="50%" height="50%" src="https://www.youtube.com/embed/dPRtcRwKo-Y" frameborder="0"
+    <!-- <iframe width="50%" height="50%" src="https://www.youtube.com/embed/dPRtcRwKo-Y" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe> -->
 
+    <img src="source/main_up.jpeg" width="25%" />
+    <img src="source/left_sidebar.jpeg" width="25%" />
 
-        <img src="source/main_up.jpeg" width="25%">
-        <img src="source/left_sidebar.jpeg" width="25%">
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+      var Tawk_API = Tawk_API || {},
+        Tawk_LoadStart = new Date();
+      (function() {
+        var s1 = document.createElement("script"),
+          s0 = document.getElementsByTagName("script")[0];
+        s1.async = true;
+        s1.src = "https://embed.tawk.to/5cb6651ad6e05b735b42f3d8/default";
+        s1.charset = "UTF-8";
+        s1.setAttribute("crossorigin", "*");
+        s0.parentNode.insertBefore(s1, s0);
+      })();
+    </script>
+    <!--End of Tawk.to Script-->
 
-        <!--Start of Tawk.to Script-->
-        <script type="text/javascript">
-                var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-                (function () {
-                        var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-                        s1.async = true;
-                        s1.src = 'https://embed.tawk.to/5cb6651ad6e05b735b42f3d8/default';
-                        s1.charset = 'UTF-8';
-                        s1.setAttribute('crossorigin', '*');
-                        s0.parentNode.insertBefore(s1, s0);
-                })();
-        </script>
-        <!--End of Tawk.to Script-->
-
-        <div id="disqus_thread"></div>
-        <script>
-
-                /**
-                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-                /*
+    <div id="disqus_thread"></div>
+    <script>
+      /**
+       *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+       *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+      /*
                 var disqus_config = function () {
                 this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
                 this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
                 };
                 */
-                (function () { // DON'T EDIT BELOW THIS LINE
-                        var d = document, s = d.createElement('script');
-                        s.src = 'https://portfolio-gbwoby9nqg.disqus.com/embed.js';
-                        s.setAttribute('data-timestamp', +new Date());
-                        (d.head || d.body).appendChild(s);
-                })();
-        </script>
-        <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by
-                        Disqus.</a></noscript>
+      (function() {
+        // DON'T EDIT BELOW THIS LINE
+        var d = document,
+          s = d.createElement("script");
+        s.src = "https://portfolio-gbwoby9nqg.disqus.com/embed.js";
+        s.setAttribute("data-timestamp", +new Date());
+        (d.head || d.body).appendChild(s);
+      })();
+    </script>
+    <noscript
+      >Please enable JavaScript to view the
+      <a href="https://disqus.com/?ref_noscript"
+        >comments powered by Disqus.</a
+      ></noscript
+    >
 
-        <script id="dsq-count-scr" src="//portfolio-gbwoby9nqg.disqus.com/count.js" async></script>
-</body>
-
+    <script
+      id="dsq-count-scr"
+      src="//portfolio-gbwoby9nqg.disqus.com/count.js"
+      async
+    ></script>
+  </body>
 </html>
