building basic structure...

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
 
   <body>
+    <script src="javascript.js"></script>
+    <input type="button" value="Light Mode" onclick="changeToLightmode()" />
+    <input type="button" value="Dark Mode" onclick="changeToDarkMode()" />
+
     <div>
       <h1 id="heading_title"><a href="index.html">Mason Youngmin Ko</a></h1>
     </div>
@@ -15,8 +19,8 @@
     <div id="grid_main">
       <div id="nav">
         <ul>
-          <li><a href="1.html">About</a></li>
-          <li><a href="2.html">Project</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="project.html">Project</a></li>
           <li>
             <a
               href="https://github.com/masonkoh/portfolio-website"
@@ -25,13 +29,15 @@
               >Tech used in this</a
             >
           </li>
+          <li><a href="asMusician.html">as musician</a></li>
         </ul>
       </div>
       <div id="content">
+        <p>index.html</p>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+          do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
           aliquip
           <strong>ex ea commodo consequat.</strong> Duis aute irure dolor in
           reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
@@ -57,9 +63,14 @@
       </div>
     </div>
 
-    <!-- <iframe width="50%" height="50%" src="https://www.youtube.com/embed/dPRtcRwKo-Y" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe> -->
+    <iframe
+      width="50%"
+      height="50%"
+      src="https://www.youtube.com/embed/dPRtcRwKo-Y"
+      frameborder="0"
+      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen
+    ></iframe>
 
     <img src="source/main_up.jpeg" width="25%" />
     <img src="source/left_sidebar.jpeg" width="25%" />
