--- a/index.html
+++ b/index.html
@@ -9,15 +9,27 @@
 
   <body>
     <script src="javascript.js"></script>
-    <input type="button" value="Light Mode" onclick="changeToLightmode()" />
-    <input type="button" value="Dark Mode" onclick="changeToDarkMode()" />
+    <script src="https://code.jquery.com/jquery-3.4.0.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $(".modeToggle").click(function() {
+          $(".modeToggle").toggleClass("active");
+          $("body").toggleClass("night");
+        });
+      });
+      // https://www.youtube.com/watch?v=PPhCJewgI4Y
+    </script>
+
+    <div class="modeToggle"></div>
+    <!-- <input type="button" value="Light Mode" onclick="changeToLightmode()" />
+    <input type="button" value="Dark Mode" onclick="changeToDarkMode()" /> -->
 
     <div>
       <h1 id="heading_title"><a href="index.html">Mason Youngmin Ko</a></h1>
     </div>
 
     <div id="grid_main">
-      <div id="nav">
+      <div id="grid_main_nav">
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="project.html">Project</a></li>
@@ -32,7 +44,7 @@
           <li><a href="asMusician.html">as musician</a></li>
         </ul>
       </div>
-      <div id="content">
+      <div id="grid_main_content">
         <p>index.html</p>
         <p>
           content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -43,22 +55,6 @@
           reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <p>
-          <strong>Sed ut perspiciatis unde</strong> omnis iste natus error sit
-          voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
-          ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-          dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-          qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-          dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-          quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-          aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-          exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
-          ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
-          ea voluptate velit esse quam nihil molestiae consequatur, vel illum
-          qui dolorem eum fugiat quo voluptas nulla pariatur?
         </p>
       </div>
     </div>
