--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <script src="javascript.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.0.js"></script>
+    <script src="source/jquery-3.4.0.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
         $(".modeToggle").click(function() {
