--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <input
       type="button"
-      id="modeToggleButton"
+      class="modeToggleButton"
       value="Dark Mode"
       onclick="toggleMode();
       "
