--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input
       type="button"
       class="modeToggleButton"
-      value="Dark Mode"
+      value="Dark"
       onclick="toggleMode();
       "
     />
