--- a/index.html
+++ b/index.html
@@ -17,15 +17,7 @@
       onclick="toggleMode();
       "
     />
-    <script>
-      if (localStorage.getItem("mode") == "dark") {
-        console.log("it's dark");
-        changeToDarkMode();
-      } else {
-        console.log("it's not dark");
-        changeToLightMode();
-      }
-    </script>
+
     <h1 id="heading_title"><a href="index.html">Mason Youngmin Ko</a></h1>
 
     <div id="grid_main">
@@ -118,5 +110,20 @@
         ></script>
       </div>
     </div>
+    <script>
+      if (localStorage.getItem("mode") == "dark") {
+        console.log("it's dark");
+        changeToDarkMode();
+        document.getElementsByClassName("modeToggleButton")[0].value = "Light";
+        var modeToggleButtonClassName = document.getElementsByClassName(
+          "modeToggleButton"
+        )[0];
+        modeToggleButtonClassName.classList.toggle("active");
+      } else {
+        console.log("it's not dark");
+        changeToLightMode();
+        document.getElementsByClassName("modeToggleButton")[0].value = "Dark";
+      }
+    </script>
   </body>
 </html>
