--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <img src="source/main_up.jpeg" width="25%" />
         <img src="source/left_sidebar.jpeg" width="25%" />
 
+        <!--Start of outside feature: 'Tawk.to', 'disqus' -->
         <!--Start of Tawk.to Script-->
         <script type="text/javascript">
           var Tawk_API = Tawk_API || {},
@@ -108,6 +109,7 @@
           src="//portfolio-gbwoby9nqg.disqus.com/count.js"
           async
         ></script>
+        <!--End of outside feature: 'Tawk.to', 'disqus' -->
       </div>
     </div>
     <script>
