--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <title>Mason Youngmin Ko</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="style.css" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <script src="javascript.js"></script>
     <script src="source/jquery-3.4.0.js"></script>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
 
   <body>
@@ -24,7 +24,6 @@
       <div id="grid_main_nav">
         <ul>
           <li><a href="about.html">About</a></li>
-          <li><a href="project.html">Project</a></li>
           <li>
             <a
               href="https://github.com/masonkoh/portfolio-website"
@@ -33,20 +32,12 @@
               >Tech used in this</a
             >
           </li>
-          <li><a href="asMusician.html">as musician</a></li>
         </ul>
       </div>
       <div id="grid_main_content">
         <p>index.html</p>
         <p>
-          content Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-          do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-          ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip
-          <strong>ex ea commodo consequat.</strong> Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          Welcome to my portfolio website
         </p>
         <iframe
           width="50%"
