--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <div id="grid_main">
       <div id="grid_main_nav">
         <ul>
-          <li><a href="about.html">About</a></li>
+          <li>
+            <a class="grid_main_nav_menu" onclick="fetchPage('about.html')"
+              >About</a
+            >
+          </li>
           <li>
             <a
               href="https://github.com/masonkoh/portfolio-website"
@@ -36,20 +40,6 @@
       </div>
       <div id="grid_main_content">
         <p>index.html</p>
-        <p>
-          Welcome to my portfolio website
-        </p>
-        <iframe
-          width="50%"
-          height="50%"
-          src="https://www.youtube.com/embed/dPRtcRwKo-Y"
-          frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-
-        <img src="source/main_up.jpeg" width="25%" />
-        <img src="source/left_sidebar.jpeg" width="25%" />
 
         <!--Start of outside feature: 'Tawk.to', 'disqus' -->
         <!--Start of Tawk.to Script-->
@@ -104,6 +94,7 @@
       </div>
     </div>
     <script>
+      // START OF WebLocalStorage for DarkMode
       if (localStorage.getItem("mode") == "dark") {
         console.log("it's dark");
         changeToDarkMode();
@@ -117,6 +108,17 @@
         changeToLightMode();
         document.getElementsByClassName("modeToggleButton")[0].value = "Dark";
       }
+      // END OF WebLocalStorage for DarkMode
+
+      // START OF fetchPage(pageName){}
+      function fetchPage(pageName) {
+        fetch(pageName).then(function(response) {
+          response.text().then(function(text) {
+            document.getElementById("grid_main_content").innerHTML = text;
+          });
+        });
+      }
+      // END OF fetchPage(pageName){}
     </script>
   </body>
 </html>
