added 'CONTACT' in menu

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul>
           <li>
             <a class="grid_main_nav_menu" onclick="fetchPage('about.html')"
-              >About</a
+              >ABOUT</a
             >
           </li>
           <li>
@@ -33,9 +33,10 @@
               href="https://github.com/masonkoh/portfolio-website"
               target="_blank"
               title="go see how this page works"
-              >Tech used in this</a
+              >TECH USED HERE</a
             >
           </li>
+          <li><a href="fetchPage('contact.html')">CONTACT</a></li>
         </ul>
       </div>
       <div id="grid_main_content">
