Added temporary 'CONTACT.html' page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
               >TECH USED HERE</a
             >
           </li>
-          <li><a href="fetchPage('contact.html')">CONTACT</a></li>
+          <li>
+            <a class="grid_main_nav_menu" onclick="fetchPage('contact.html')"
+              >CONTACT</a
+            >
+          </li>
         </ul>
       </div>
       <div id="grid_main_content">
