'contact.html' link is now NOT AJAX but just html

--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
             >
           </li>
           <li>
-            <a class="grid_main_nav_menu" onclick="fetchPage('contact.html')"
-              >CONTACT</a
-            >
+            <a href="contact.html">CONTACT</a>
           </li>
         </ul>
       </div>
